Add MCP stdio transport for Claude Code integration
Add the official MCP Java SDK (v0.12.1) with stdio transport so Claude
Code can communicate with the server via JSON-RPC over stdin/stdout.
The mcp Spring profile activates stdio transport while keeping REST
endpoints available on port 8080 for data population.

Includes Datadog correlation workflow documentation in global CLAUDE.md
and MCP setup instructions in README.